added date for GENIES paper

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h3><a href="https://arxiv.org/abs/2311.07723" class="paper-link">Generalization Analogies: A Testbed for Generalizing AI Oversight to Hard-To-Measure Domains</a></h3>
         <p>
           <em>J. Clymer, G. Baker, <strong>R. Subramani</strong>, S. Wang</em><br>
-          <em>Preprint.</em><br>
+          <em>Preprint, 2023.</em><br>
           Developing formal frameworks to test AI systems' ability to generalize oversight to novel domains.
         </p>
       </div>
