Add sabotage paper, Misc section with CoT monitoring talk

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
       <h2>Papers</h2>
 
       <div class="paper-card">
+        <h3><a href="https://arxiv.org/abs/2601.21112" class="paper-link">How does information access affect LLM monitors' ability to detect sabotage?</a></h3>
+        <p>
+          <em>R. Arike*, R.M. Moreno*, <strong>R. Subramani</strong>*, S. Biswas, F.R. Ward</em><br>
+          <em>Preprint, 2026</em><br>
+          Studying how information access affects LLM monitor performance; finds that monitors often perform better with less of the agent's reasoning and actions (less-is-more effect) and introduces extract-and-evaluate (EaE) monitoring, which improves sabotage detection in multiple environments.
+        </p>
+      </div>
+      <div class="paper-card">
         <h3><a href="https://arxiv.org/abs/2512.03089" class="paper-link">Password-Activated Shutdown Protocols for Misaligned Frontier Agents</a></h3>
         <p>
           <em>K. Williams*, <strong>R. Subramani</strong>*, F.R. Ward*</em><br>
@@ -126,6 +134,15 @@
       <div class="project-card">
         <h3><a href="https://colab.research.google.com/drive/13WDSp7B5oRZuT3mg_vQac-4NxrjpLLe1?usp=sharing" class="paper-link">Experimenting with neural network pruning</a></h3>
         <p>Reimplemented and visualized some ideas from the Lottery Ticket Hypothesis paper.</p>
+      </div>
+    </section>
+
+    <!-- Misc -->
+    <section id="misc">
+      <h2>Misc</h2>
+      <div class="project-card">
+        <h3><a href="https://www.youtube.com/live/39XJfbzBWPo" class="paper-link">Trajectory Labs Talk: Chain-of-Thought Monitoring and AI Control</a></h3>
+        <p>Talk from October 2025 with Rauno Arike. Overview of chain-of-thought monitorability and AI control, and discussion of recent work on comparing the performance of monitors with varying amounts of information access.</p>
       </div>
     </section>
 
