Update profile image to profile.png, improve crop and positioning

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="images/profile.jpg">
+  <link rel="icon" type="image/png" href="images/profile.png">
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -51,9 +51,7 @@
           </div>
         </div>
       </div>
-      <div class="hero-image">
-        <img src="profile.jpg" alt="profile photo" class="profile-img">
-      </div>
+      <div class="hero-image" role="img" aria-label="Profile photo"></div>
     </section>
 
     <!-- Papers -->
